# luna

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  MANIFEST.in  README.md  RunAlphaCROWN.cpp  RunCROWN.cpp  RunFull.cpp  run_benchmark_comparison.py  run_tllverifybench_alpha_crown.py  setup.py
auto_LiRPA/: optimized_bounds.py
cmake/: FindCxxTest.cmake
lirpapy/: CMakeLists.txt  LirpaPyCore.cpp  __init__.py  lirpapy.py  pytest.ini  run_tests.sh
lirpapy/examples/: 01_basic_usage.py  02_manual_bounds.py  03_alpha_crown.py  04_specification_matrix.py  05_forward_pass.py  README.md
lirpapy/tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_basic.py  test_install.py  test_integration.py
lunapy/: CMakeLists.txt  LunaPyCore.cpp  __init__.py  lunapy.py  pytest.ini  run_tests.sh
lunapy/examples/: 01_basic_usage.py  02_manual_bounds.py  03_alpha_crown.py  04_specification_matrix.py  05_forward_pass.py  README.md
lunapy/tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_basic.py  test_install.py  test_integration.py
resources/: one_relu_mlp.onnx  prop_no_output.vnnlib  two_relu_mlp.onnx
resources/iterative/: create_growing_onnx.py  eight_mlp.onnx  five_mlp.onnx  four_mlp.onnx  nine_mlp.onnx  one_mlp.onnx  prop.vnnlib  seven_mlp.onnx  six_mlp.onnx  ten_mlp.onnx  three_mlp.onnx  two_mlp.onnx
resources/onnx/layer-zoo/: README.md  add.onnx  batchnorm.onnx  cast_int_to_float.onnx  constant.onnx  conv.onnx  dropout.onnx  dropout_training_mode_false.onnx  dropout_training_mode_true.onnx  flatten.onnx  gemm.onnx  identity.onnx  leakyRelu.onnx  matmul.onnx  maxpool.onnx  onnx-layer-zoo.py  relu.onnx  requirements.txt  reshape.onnx  reshape_with_dimension_inference.onnx  sigmoid.onnx  squeeze.onnx  squeeze_with_axes.onnx  sub.onnx  tanh.onnx  transpose.onnx  unsqueeze.onnx
resources/onnx/vnnlib/: acasxu_prop1.vnnlib  sat_v6_c27.vnnlib  toy_add_complex_box.vnnlib
resources/properties/: deeper_network_test.vnnlib  spec_test.vnnlib
resources/sigmoid/onnx/: sigmoid_add.onnx  sigmoid_branching.onnx  sigmoid_chain.onnx  sigmoid_deep.onnx  sigmoid_simple.onnx
resources/sigmoid/vnn/: sigmoid_add.vnnlib  sigmoid_branching.vnnlib  sigmoid_chain.vnnlib  sigmoid_deep.vnnlib  sigmoid_simple.vnnlib
scripts/: debug_bound_width.py
scripts/reference_generator/: generate_reference.py  requirements.txt
src/: main.cpp
src/common/: BoundedTensor.h  CMakeLists.txt  MString.cpp  MString.h  Set.h  TensorUtils.h
src/common/T/: Errno.h  stdlib.h  unistd.h
src/configuration/: CMakeLists.txt  GlobalConfiguration.cpp  LirpaConfiguration.cpp  LirpaConfiguration.h  LunaConfiguration.cpp  LunaConfiguration.h  Options.h
src/engine/: AlphaCROWNAnalysis.cpp  AlphaCROWNAnalysis.h  BoundResult.h  CMakeLists.txt  CROWNAnalysis.cpp  CROWNAnalysis.h  LirpaError.h  LirpaMain.cpp  LirpaMain.h  LunaError.h  LunaMain.cpp  LunaMain.h  TorchModel.cpp  TorchModel.h
src/engine/conv/: ConvolutionMode.h  MatrixConvolution.cpp  MatrixConvolution.h  Patches.cpp  Patches.h
src/engine/nodes/: BoundedAddNode.cpp  BoundedAddNode.h  BoundedAlphaOptimizedNode.h  BoundedBatchNormNode.cpp  BoundedBatchNormNode.h  BoundedConcatNode.cpp  BoundedConcatNode.h  BoundedConstantNode.cpp  BoundedConstantNode.h  BoundedConvNode.cpp  BoundedConvNode.h  BoundedConvTransposeNode.cpp  BoundedConvTransposeNode.h  BoundedFlattenNode.cpp  BoundedFlattenNode.h  BoundedIdentityNode.cpp  BoundedIdentityNode.h  BoundedInputNode.cpp  BoundedInputNode.h  BoundedLinearNode.cpp  BoundedLinearNode.h  (+11 more)
src/input_parsers/: CMakeLists.txt  OnnxToTorch.cpp  OnnxToTorch.h  Operations.h  OutputConstraint.cpp  OutputConstraint.h  VnnLibInputParser.cpp  VnnLibInputParser.h
src/nlr/: AlphaCROWNAnalysis.cpp  AlphaCROWNAnalysis.cpp.bak2  AlphaCROWNAnalysis.h  BoundedAddNode.cpp  BoundedAddNode.h  BoundedAlphaOptimizedNode.cpp  BoundedAlphaOptimizedNode.h  BoundedConstantNode.cpp  BoundedConstantNode.h  BoundedFlattenNode.cpp  BoundedFlattenNode.h  BoundedIdentityNode.cpp  BoundedIdentityNode.h  BoundedInputNode.cpp  BoundedInputNode.h  BoundedLinearNode.cpp  BoundedLinearNode.h  BoundedReLUNode.cpp  BoundedReLUNode.h  BoundedReshapeNode.cpp  BoundedReshapeNode.h  BoundedSubNode.cpp  BoundedSubNode.h  BoundedTorchNode.h  CROWNAnalysis.cpp  CROWNAnalysis.h  LirpaError.h  TorchModel.cpp  TorchModel.h
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  bench_acasxu.cpp  bench_alpha_crown.cpp  bench_crown_analysis.cpp  bench_ibp_vs_crown.cpp
tests/fixtures/: CMakeLists.txt  model_builders.cpp  model_builders.h  tensor_comparators.cpp  tensor_comparators.h  test_utils.cpp  test_utils.h
tests/integration/: CMakeLists.txt  RunAlphaCROWN.cpp  RunCROWN.cpp  RunFull.cpp  RunFullOptimized.cpp  RunSpec.cpp  TestAdd.cpp  TestBatchNorm.cpp  TestConvDiagnostics.cpp  TestFlatten.cpp  TestResidualCrownSoundness.cpp  test_alpha_crown_pipeline.cpp  test_crown_pipeline.cpp  test_onnx_vnnlib_pipeline.cpp
tests/property/: CMakeLists.txt  test_alpha_convergence.cpp  test_bound_monotonicity.cpp  test_crown_tighter_than_ibp.cpp  test_random_networks.cpp
tests/reference/: CMakeLists.txt  test_alpha_crown_vs_autolirpa.cpp  test_comprehensive_reference.cpp  test_crown_vs_autolirpa.cpp
tests/regress/: run_regression.py
tests/regression/: CMakeLists.txt  test_acasxu_regression.cpp  test_cifar_regression.cpp  test_mnist_regression.cpp  test_toy_models_regression.cpp
tests/soundness/: CMakeLists.txt  test_alpha_crown_soundness.cpp  test_crown_soundness.cpp  test_ibp_soundness.cpp  test_relaxation_soundness.cpp
tests/unit/: CMakeLists.txt
tests/unit/analysis/: CMakeLists.txt  test_alpha_crown_analysis.cpp  test_crown_analysis.cpp  test_gpu_device.cpp
tests/unit/nodes/: CMakeLists.txt  test_add_node.cpp  test_batchnorm_node.cpp  test_conv_node.cpp  test_flatten_node.cpp  test_linear_node.cpp  test_relu_node.cpp  test_reshape_node.cpp  test_sigmoid_node.cpp
tests/unit/parsers/: CMakeLists.txt  test_onnx_parser.cpp  test_vnnlib_parser.cpp
tools/: download_libtorch.sh  download_onnx.sh
tools/cxxtest/: cxxtestgen.py
(+160 files in other folders)
